Added assets processor for inlining external javascripts and stylesheets

--- a/app/assets/javascripts/polymer/polymer.html.erb
+++ b/app/assets/javascripts/polymer/polymer.html.erb
@@ -8,4 +8,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <%= html_import_tag 'polymer/layout' %>
-<%= javascript_include_tag 'polymer/polymer' %>
+<script src="polymer.js"></script>
