seperated the css and js from the main template into their own scss and coffee flies

--- a/lib/generators/polymer/component/templates/component.html.erb
+++ b/lib/generators/polymer/component/templates/component.html.erb
@@ -1,15 +1,9 @@
 <polymer-element name="<%= name %>">
   <template>
-    <style>
-      :host {
-        display: block;
-      }
-    </style>
+    <link rel="stylesheet" href="<%=  name %>/<%= name %>.css">
 
     <h2><%= file_name.capitalize.gsub('_', ' ') %></h2>
   </template>
 
-  <script type="text/javascript">
-    Polymer('<%= name %>');
-  </script>
+  <script src="<%= name %>/<%= name %>.js">
 </polymer-element>
