Updated generators and readme

--- a/lib/generators/polymer/component/templates/component.html.erb
+++ b/lib/generators/polymer/component/templates/component.html.erb
@@ -1,9 +1,9 @@
-<polymer-element name="<%= component_name %>">
+<dom-module id="<%= component_name %>">
+  <link rel="stylesheet" href="<%= component_name %>.css" />
   <template>
-    <link rel="stylesheet" href="<%= component_name %>.css" />
 
     <h2><%= file_name.capitalize.gsub('_', ' ') %></h2>
   </template>
 
   <script src="<%= component_name %>.js"></script>
-</polymer-element>
+</dom-module>
